Readme and remove dead code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "milankovitch"
-version = "0.1.0"
+version = "1.0"
 description = ""
 authors = ["Richard Lyon <richlyon@mac.com>"]
 readme = "README.md"
@@ -12,6 +12,8 @@ pandas = "^1.5.3"
 matplotlib = "^3.7.1"
 openpyxl = "^3.1.2"
 
+[tool.poetry.scripts]
+sealevel = "milankovitch.sealevel:plot_sealevel"
 
 [build-system]
 requires = ["poetry-core"]
